--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation 'org.apache.commons:commons-collections4:4.3'
     implementation 'commons-codec:commons-codec:1.13'
 
+    implementation 'org.apache.commons:commons-compress:1.20'
+
     annotationProcessor("org.projectlombok:lombok:1.18.8")
 
     testImplementation 'org.testng:testng:6.14.3'
